--- a/cinema/templates/base.html
+++ b/cinema/templates/base.html
@@ -39,7 +39,7 @@
             </li>
             {% if  user.is_authenticated %}
             <li class="nav-item">
-                <a class="nav-link" href="#">My reservations</a>
+                <a class="nav-link" href={% url "movies:myreservations" %}>My reservations</a>
             </li>
             {% endif %}
         </ul>
@@ -54,6 +54,11 @@
           <li class="nav-item">
             <li class="nav-item mr-3">
                 <a class="btn btn-info" href="{% url 'registermanager' %}">Add Manager</a>
+              </li>
+          </li>
+          <li class="nav-item">
+            <li class="nav-item mr-3">
+                <a class="btn btn-info" href="/admin/">Admin Page</a>
               </li>
           </li>
           {% endif %}
