--- a/cinema/movies/templates/movies/movie_list.html
+++ b/cinema/movies/templates/movies/movie_list.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %}Upcoming Movies{% endblock title %}
+{% block title %}{{view.title}}{% endblock title %}
 {% block header1 %}
-    <h1>Upcoming Movies</h1>
+    <h1>{{view.header}}</h1>
 {% endblock header1 %}
 
 {% block content %}
