--- a/cinema/movies/templates/movies/movie_list.html
+++ b/cinema/movies/templates/movies/movie_list.html
@@ -9,7 +9,7 @@
     {% for m in object_list %}
         <div class="card mb-2">
             <div class="card-header">
-                <a href={% url "movies:infomovie" m.pk %}>{{m.title}} by {{m.director}}</a>
+                <a href={% url "movies:infomovie" m.pk %}>{{m.title}} by {{m.director}}{% if m.get_score != None %}, {{m.get_score}}/10{% endif %}</a>
             </div>
             <div class="card-body">
                 <ul>
