--- a/cinema/templates/base.html
+++ b/cinema/templates/base.html
@@ -32,7 +32,7 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Search</a>
+                <a class="nav-link" href={% url "movies:search" %}>Search</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href={% url "movies:upcomingmovies" %}>Upcoming movies</a>
