added makereservation page, only posts request

--- a/cinema/movies/templates/movies/info_movie.html
+++ b/cinema/movies/templates/movies/info_movie.html
@@ -27,7 +27,7 @@
             <div class="col-md-4">
                 <div class="card mb-2">
                     <div class="card-header">
-                        <a href="#">{{s.date}} in room {{s.room.name}}</a>
+                        <a href={% url "movies:makereservation" s.pk %}>{{s.date}} in room {{s.room.name}}</a>
                     </div>
                 </div>
             </div>
