--- a/cinema/movies/templates/movies/my_reservations.html
+++ b/cinema/movies/templates/movies/my_reservations.html
@@ -18,7 +18,7 @@
         </div>
     {% endfor %}
     <br>
-    <h2>Old</h2>
+    <h2>Past</h2>
     {% for r in old_res %}
         <div class="card mb-2">
             <div class="card-header">
