--- a/cinema/templates/registration/login.html
+++ b/cinema/templates/registration/login.html
@@ -4,6 +4,13 @@
 {% block header1 %}<h1>Login Page</h1>{% endblock header1 %}
 
 {% block content %}
+
+{% if "notok" in request.GET.auth %}
+<div class="alert alert-danger" role="alert">
+    You need to be logged in to view this page!
+</div>
+{% endif %}
+
 <div class="container" style="margin-top:30px">
     <div class="row">
         <div class="col" style="border-right: 1px solid rgba(32, 30, 39, 0.692); height: 100%;">
