--- a/cinema/templates/registration/login.html
+++ b/cinema/templates/registration/login.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
+{% block title %}Login{% endblock title %}
 {% block header1 %}<h1>Login Page</h1>{% endblock header1 %}
 
 {% block content %}
