--- a/cinema/templates/base.html
+++ b/cinema/templates/base.html
@@ -44,6 +44,9 @@
             <li class="nav-item">
                 <a class="nav-link" href={% url "movies:myreservations" %}>My reservations</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href={% url "movies:myreviews" %}>My reviews</a>
+            </li>
             {% endif %}
         </ul>
         <ul class="navbar-nav ml-auto">
