--- a/cinema/templates/registration/login.html
+++ b/cinema/templates/registration/login.html
@@ -8,7 +8,7 @@
 
 {% if "notok" in request.GET.auth %}
 <div class="alert alert-danger" role="alert">
-    You need to be logged in to view this page!
+    You need to be logged in or have the right privileges to view this page!
 </div>
 {% endif %}
 
