--- a/cinema/movies/templates/movies/add_entry.html
+++ b/cinema/movies/templates/movies/add_entry.html
@@ -7,7 +7,7 @@
 {% endblock header1 %}
 
 {% block content %}
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
         {% crispy form %}
     <form>
 {% endblock content %}
