--- a/cinema/movies/templates/movies/info_movie.html
+++ b/cinema/movies/templates/movies/info_movie.html
@@ -7,6 +7,8 @@
 {% block content %}
     <h2><b>Title</b>: {{object.title}}</h2>
     <br>
+        <img  src="{{object.cover.url}}"/>
+    <br>
     <p><b>Director</b>: {{object.director}}</p>
     <br>
     <p><b>Duration</b>: {{object.duration}}</p>
