--- a/cinema/movies/templates/movies/remove_rooms.html
+++ b/cinema/movies/templates/movies/remove_rooms.html
@@ -1,19 +1,35 @@
-{% extends "base.html" %}
-{% block title %}Remove Rooms{% endblock title %}
-{% block header1 %}
-    <h1>Remove Rooms</h1>
-{% endblock header1 %}
-
-{% block content %}
-    {% if object_list|length == 0 %}
-        <h2>There are no rooms</h2>
-    {% endif %}
-    {% for r in object_list %}
-    <div class="card mb-2">
-        <div class="card-header">{{r}}</div>
-        <div class="card-body">
-            <a class="btn btn-danger" href="{% url 'movies:deleteroom' r.pk %}">Remove</a>
+{% extends "base.html" %} {% block title %}Remove Rooms{% endblock title %}
+{%block header1 %}
+<h1>Remove Rooms</h1>
+{% endblock header1 %} {% block content %} {% if "ok" in request.GET.delete %}
+<div id="info" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <p>Room removed successfully</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-info" data-dismiss="modal">
+                    Close
+                </button>
+            </div>
         </div>
     </div>
-    {% endfor %}
-{% endblock content %}
+</div>
+<script>
+    $(document).ready(function () {
+        $("#info").modal("show");
+    });
+</script>
+{% endif %} {% if object_list|length == 0 %}
+<h2>There are no rooms</h2>
+{% endif %} {% for r in object_list %}
+<div class="card mb-2">
+    <div class="card-header">{{r}}</div>
+    <div class="card-body">
+        <a class="btn btn-danger" href="{% url 'movies:deleteroom' r.pk %}"
+            >Remove</a
+        >
+    </div>
+</div>
+{% endfor %} {% endblock content %}
